--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock title}</title>
+    <title>{% block title %}{% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
@@ -21,6 +21,16 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
                 <a class="nav-link" href="{% url 'about' %}">About</a>
+                <a class="nav-link" href="{% url 'list' %}">List</a>
+                {% if user.is_authenticated %}
+                <a class="nav-link" href="{% url 'new' %}">New</a>
+                <form method="POST" action="{% url 'logout' %}">
+                    {% csrf_token %}
+                    <input type="submit" class="nav-link" value="Log Out">
+                </form>
+            {% else %}
+                <a class="nav-link" href="{% url 'login' %}">Log In</a>
+            {% endif %}
             </div>
         </div>
     </nav>
